[gd_scene load_steps=3 format=3 uid="uid://bgp5qc8ejutey"]

[ext_resource type="Script" path="res://menu.gd" id="1_n05mf"]
[ext_resource type="PackedScene" uid="uid://bb8gk3kvnh7dj" path="res://map.tscn" id="2_mdpuf"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n05mf")

[node name="CsvFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
initial_position = 1
size = Vector2i(634, 300)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
root_subfolder = "../results"

[node name="PickCsvButton" type="Button" parent="."]
layout_mode = 1
offset_right = 79.0
offset_bottom = 31.0
text = "Pick data"

[node name="Timeline" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 984.0
grow_horizontal = 2
grow_vertical = 2
max_value = 0.0

[node name="Timestamps" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map" parent="." instance=ExtResource("2_mdpuf")]
unique_name_in_owner = true
layout_mode = 1
anchor_right = 1.5
anchor_bottom = 0.98
offset_top = 180.0
offset_right = -400.0
offset_bottom = 0.0
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.5
anchor_bottom = 0.98
offset_left = 800.0
offset_top = 180.0
offset_right = -0.00012207

[node name="CurrentActions" type="GridContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[connection signal="dir_selected" from="CsvFileDialog" to="." method="_on_csv_file_dialog_dir_selected"]
[connection signal="pressed" from="PickCsvButton" to="." method="_on_pick_csv_button_pressed"]
[connection signal="value_changed" from="Timeline" to="." method="_on_timeline_value_changed"]
